# axum-template

./: .env  .gitignore  Cargo.toml  Makefile  README.md  cargo-generate.toml  cliff.toml  test.rest
.github/workflows/: build.yml
config/: dev.yaml  prod.yaml
sql/: init.sql
src/: application.rs  auth.rs  common.rs  database.rs  error.rs  lib.rs  main.rs  request.rs  response.rs
src/api/: login_auth.rs  mod.rs  user.rs  workspace.rs
src/config/: database.rs  mod.rs  server.rs
src/entity/: chats.rs  messages.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  users.rs  workspace.rs
src/handlers/: mod.rs  user.rs  workspace.rs
src/models/: user.rs
src/routes/: mod.rs  user.rs
