[package]
name = "axum_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
axum = { version = "0.8.4" }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145" }
#dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "chrono"] }
tracing = {version = "0.1.41", features = ["async-await"]}
config = {version = "0.15.18", features = ["yaml"]}
anyhow = "1.0.100"
sea-orm = {version =  "1.1.17", features = ["with-chrono", "debug-print", "sqlx-postgres", "with-rust_decimal", "runtime-tokio"] }
num_cpus = "1.17.0"
thiserror = "2.0.17"
tower-http = { version = "0.6.6", features = ["trace"] }
xid = "1.1.1"
